--- a/html/tarea19.html
+++ b/html/tarea19.html
@@ -19,6 +19,8 @@
         <img src="../image/mencos.jpeg" width="300">
 
         <p class="texto">SUBTTE DE TTMM: LUIS ALEJANDRO MENCOS CHAVEZ</p>
+        <p class="texto2">El Oficial en mencion se destaca por sus multiples logros en operaciones en diferentes areas del pais,
+            recibiendo condecoraciones. Es una persona con entusiasmo y espiritu de cuerpo.</p>
         <center>
             <table id="table">
                 <tr>
